# hookrelay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: config.json
src/hookrelay/: __init__.py  cli.py  config.py  delivery.py  matching.py  server.py  signature.py  sinks.py  template.py
tests/: test_cli.py  test_config.py  test_delivery.py  test_matching.py  test_server.py  test_signature.py  test_sinks.py  test_template.py
